Ipe 7.2.30

 * Rewrite wait dialog again to make it work with Qt 6.7 (bug #506).

 * Do not run Latex for each small undo/redo step (#508).

 * Fix view map getting lost in view sorter (bug #507).

----------------------------------------------------------------------

Ipe 7.2.29 (2024-05-25)

 * Fix crash on MacOS when moving Ipe to another screen by updating
   Cairo (bug #480).

 * Fix symbol snap points not scaling with symbol size (bug #486).

 * Fix edges not always following when a node is moved (bug #487).

 * Interpret strings in PDF documents that are in UTF-16 (ipepresenter
   bug #11).

 * Fix Latex not being run automatically after paste (#497).

 * Fix remapped symbol not changing in PDF output (bug #503).

 * Cleanup Qt version of wait dialog (when Latex runs), using an
   explicit mutex.  Hoping this will fix #495 and #504.

 * Make F10 behave a bit nicer by ignoring text outside the frame and
   in locked layers.

 * When the LaTeX preamble starts with "#&", then the first line of
   the preamble is placed at the top of the LaTeX source (#494).

 * Fix bounding box for SVG exports (bug #498).

 * Fix setting grid size and angle size through the Snap menu on
   Windows (bug #496).

 * Fix selecting, snapping to, and bounding box of objects with
   restricted transformations (translations only or rigid motions
   only) (bug #493).

 * Add clipping to PDF form rendering (ipepresenter bug #12).

----------------------------------------------------------------------

Ipe 7.2.28 (2023-08-13)

 * Add "sequential text" option.

 * Fix centering of title in presentation stylesheet (bug #464).

 * Link to manual and Ipelib documentation online instead of
   installing it locally by default.

 * Add "-tolerance" option to iperender (#461).

 * Store document language to enable appropriate spell checking
   (#451).

 * Fix HiDPI handling on Qt6 (#470).

 * Fix error editing arcs (#472).

 * Fix error editing ellipses (#473).
